--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Weight Logger</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_insert_data">insert data</string>
+    <string name="title_activity_second">SecondActivity</string>
 </resources>
